# skinnervation3d-app

./: .gitignore  404.html  LICENSE  README.md  app_controller.py  conda-lock.yml  environment.yml  index.html  install.bat  install.py  install.sh  main_pyside.py  mkdocs.yml  pyproject.toml  run_gui.py  sitemap.xml
.github/workflows/: docs.yml
docs/: index.md  installation.md  usage.md
installation/: index.html
search/: search_index.json
src/skinnervation3d_app/: __main__.py  app.py  config.py
src/skinnervation3d_app/resources/docs/analysis/: 404.html  index.html  objects.inv
src/skinnervation3d_app/resources/docs/analysis/how-to/how_to_crop_rois/: index.html
src/skinnervation3d_app/resources/docs/analysis/installation/: index.html
src/skinnervation3d_app/resources/docs/analysis/search/: search_index.json
src/skinnervation3d_app/resources/docs/analysis/tasks/analyse_fiber_plexus/: index.html
src/skinnervation3d_app/resources/docs/analysis/tasks/export_results/: index.html
src/skinnervation3d_app/resources/docs/analysis/usage/: index.html
src/skinnervation3d_app/resources/docs/app/: 404.html  index.html  objects.inv
src/skinnervation3d_app/resources/docs/app/installation/: index.html
src/skinnervation3d_app/resources/docs/app/search/: search_index.json
src/skinnervation3d_app/resources/docs/app/usage/: index.html
src/skinnervation3d_app/resources/docs/preprocessing/: 404.html  index.html  objects.inv  sitemap.xml
src/skinnervation3d_app/resources/docs/preprocessing/api/: index.html
src/skinnervation3d_app/resources/docs/preprocessing/changelog/: index.html
src/skinnervation3d_app/resources/docs/preprocessing/contributing/: index.html
src/skinnervation3d_app/resources/docs/preprocessing/installation/: index.html
src/skinnervation3d_app/resources/docs/preprocessing/search/: search_index.json
src/skinnervation3d_app/resources/docs/preprocessing/usage/: index.html
src/skinnervation3d_app/services/: napari.py  server.py
src/skinnervation3d_app/settings/: channel_settings.py  settings_manager.py
src/skinnervation3d_app/tasks/: registry.py  spec.py
src/skinnervation3d_app/ui/: channel_settings_window.py  logging.py  opening_dialog_window.py  worker_window.py  workflow_window.py
src/skinnervation3d_app/ui/param_widgets/: leaf.py  list_widget.py  optional.py  param_factory.py  tuple_widget.py
src/skinnervation3d_app/utils/: models.py
src/skinnervation3d_app/workflow/: engine.py  models.py  outputs.py
usage/: index.html
(+17 files in other folders)
