# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/

[tool.hatch.build.targets.wheel]
packages = ["src/skinnervation3d_app"]
exclude = [
    "data",
    "Data",
    "docs",
    "tests",
    "examples",
    "*.zarr",
    "*.tif",
    "*.h5",
    "*.npz",
    "*.npy",
    "*.tiff",
    "*.png",
    "*.jpg",
    "*.jpeg",
    "*.mp4",
    "*.mov",
]

[tool.hatch.build]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist"
]

# Project metadata (see https://peps.python.org/pep-0621)
[project]
name = "skinnervation3d-app"
dynamic = ["version"]
description = "SkInnervation3D User Interface"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
  { name = "Giliane Rochat", email = "giliane.rochat@usz.ch" }]
dependencies = [
  "pydantic>=2",
  "PySide6>=6.6",
  "requests",
  #"skinnervation3d-fractal-tasks",
  #"mesospim-fractal-tasks",
]
dev = [
  "pytest",
  "pytest-mock",
  "ruff",
  "devtools",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python",
]

# GUI entry point (no console window on Windows when installed properly)
[project.gui-scripts]
skinnervation3d = "skinnervation3d_app.__main__:main"

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
pydocstyle = { convention = "google" }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "D401", # First line should be in imperative mood (remove to opt in)
    "D415", # First line should end with a period (remove to opt in)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 89
skip-magic-trailing-comma = false  # default is false